--- a/pom.xml
+++ b/pom.xml
@@ -47,13 +47,7 @@
           <execution>
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.nevermind.client/com.nevermind.client.HelloApplication</mainClass>
-              <launcher>app</launcher>
-              <jlinkZipName>app</jlinkZipName>
-              <jlinkImageName>app</jlinkImageName>
-              <noManPages>true</noManPages>
-              <stripDebug>true</stripDebug>
-              <noHeaderFiles>true</noHeaderFiles>
+              <mainClass>com.nevermind.client/com.nevermind.client.AppApplication</mainClass>
             </configuration>
           </execution>
         </executions>
