--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-api.url=http://localhost:8080/v1/
-websocket.url=ws://localhost:8080/chat
+api.url=${NEVERMIND_API_URL}
+websocket.url=${NEVERMIND_WEBSOCKET_URL}
